# foundry-agent-memory

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/agents/: agent-builder.agent.md  code-validator.agent.md  dev-executor.agent.md  orchestrator.agent.md  prd-architect.agent.md  task-planner.agent.md
docs/prd/: 00-overview.md  01-architecture.md  02-scenarios.md  03-non-functional-requirements.md  04-task-backlog.md
docs/tasks/: README.md
docs/tasks/dev/: DEV-001.md  DEV-002.md  DEV-003.md  DEV-004.md  DEV-005.md  DEV-006.md  DEV-007.md  DEV-008.md  DEV-009.md  DEV-010.md  DEV-011.md  DEV-012.md
