[project]
name = "foundry-agent-memory"
version = "0.1.0"
description = "Microsoft Foundry Agents memory capabilities demonstration"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=1.1.0b1",
    "azure-identity",
    "agent-framework",
    "agent-framework-foundry-hosting",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
